--- a/app/src/main/res/layout/activity_past_notes_list.xml
+++ b/app/src/main/res/layout/activity_past_notes_list.xml
@@ -11,7 +11,8 @@
     <TextView android:text="@+id/TextView01" android:id="@+id/TextView01"
             android:layout_width="wrap_content" android:layout_height="wrap_content"
             android:singleLine="true" android:textStyle="bold" android:layout_marginTop="5dip"
-            android:layout_marginLeft="5dip"></TextView>
+            android:layout_marginLeft="5dip"
+        ></TextView>
 
 
     <TextView android:text="@+id/TextView02" android:id="@+id/TextView02"
