--- a/app/src/main/res/layout/activity_past_notes_list.xml
+++ b/app/src/main/res/layout/activity_past_notes_list.xml
@@ -1,23 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        tools:context="bradenkatzman.brisknote.PastNotesList">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical" >
 
-    <TextView android:text="@+id/TextView01" android:id="@+id/TextView01"
-            android:layout_width="wrap_content" android:layout_height="wrap_content"
-            android:singleLine="true" android:textStyle="bold" android:layout_marginTop="5dip"
-            android:layout_marginLeft="5dip"
-        ></TextView>
-
-
-    <TextView android:text="@+id/TextView02" android:id="@+id/TextView02"
-        android:layout_width="wrap_content" android:layout_height="wrap_content"
-        android:layout_marginLeft="10dip"></TextView>
+    <ListView
+        android:id="@+id/list"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:baselineAligned="false"
+        android:descendantFocusability="blocksDescendants"
+        android:gravity="center_vertical"></ListView>
 
 </LinearLayout>
 
