--- a/app/src/main/res/layout/activity_brisk_note.xml
+++ b/app/src/main/res/layout/activity_brisk_note.xml
@@ -55,4 +55,14 @@
 
         android:onClick="pastNotes"/>
 
+    <Button android:id="@+id/send"
+
+        android:layout_width="fill_parent"
+
+        android:layout_height="wrap_content"
+
+        android:text="Share with App"
+
+        android:onClick="sendText"/>
+
 </LinearLayout>
